<resources>
    <string name="app_name">Gleaming</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="text_name">Name</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_date">Date</string>
    <string name="text_age">Age</string>
    <string name="text_email">Email</string>
    <string name="text_password">Password</string>
    <string name="btn_sign">SIGN UP</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_edit">EDIT</string>
    <string name="bar_menu">Home</string>
    <string name="bar_like">Like</string>
    <string name="bar_perfil">Perfil</string>
    <string name="description">Description</string>
    <string name="details">Your details</string>
    <string name="tags">Tags</string>
    <string name="location">Location</string>
    <string name="related">Related</string>
    <string name="text_a_account">Do you have an account? Login</string>
    <string name="text_not_account">Create Account</string>
    <string name="text_forgot_password">Forgot Password</string>
    <string name="text_edit_profile">Edit Profile</string>
    <string name="text_details_profile">Your Detaiks</string>
    <string name="tittle_login">Log into \n  your account</string>
    <string name="tittle_forgot_password">Forgot \nyour password?</string>
    <string name="text_forgot_password_enter_mail"> Enter your email to retrieve your account.\n</string>
    <string name="text_forgot_password_reset">Reset password</string>
    <string name="tittle_register">Create \nyour account</string>
    <string name="logout">Log out</string>
    <string name="main_all">ALL</string>
    <string name="main_women">WOMEN</string>
    <string name="main_men">MEN</string>
    <string name="main_trends">TRENDS</string>
    <string name="prenda_id">prenda_id</string>
    <string name="product_img">prenda_img</string>
    <string name="title_activity_backgroundblurry">backgroundblurry</string>
    <string name="user_id">user_id</string>
    <string name="user_name">user_name</string>
    <string name="user_img">user_img</string>
</resources>
