<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:background="@color/colorBlack"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/montserrat_bold"
        android:textColorHint="@color/colorWhite"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:gravity="start"
        android:text="@string/tittle_forgot_password"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/montserrat_regular"
        android:textSize="16dp"
        android:layout_marginBottom="15dp"
        android:gravity="start"
        android:text="@string/text_forgot_password_enter_mail"
        />

    <EditText
        android:id="@+id/txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/text_email"
        style="@style/TextAppearance.AppCompat"
        android:inputType="textEmailAddress"
        android:layout_marginTop="15dp"
        android:textColor="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        />

    <Button
        android:id="@+id/btn_reset_password"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/text_forgot_password_reset"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_gravity="center"/>

</LinearLayout>