<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingStart="32dp"
    android:paddingEnd="32dp"
    android:background="@color/colorBlack"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#FFFFFF"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="20dp"
        android:layout_marginBottom="15dp"
        android:gravity="start"
        android:text="@string/tittle_register"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_txt_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_name"
            android:textColor="@color/colorWhite"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_txt_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_last_name"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="textPersonName"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_txt_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_date"
            android:textColor="@color/colorWhite"
            android:inputType="date"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_txt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_email"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorWhite"
            android:inputType="textEmailAddress"/>
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ly_txt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/colorWhite"
        android:textColor="@color/colorWhite"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_password"
            android:textColor="@color/colorWhite"
            android:inputType="textVisiblePassword"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btn_register"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"
        android:text="@string/btn_sign"
        android:textColor="#FFFFFF"
        android:layout_marginTop="50dp"
        android:layout_width="250dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/go_to_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_a_account"
        android:gravity="center"
        android:textColor="#FFFFFF"
        />


</LinearLayout>