<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".ProductActivity">

   <!-- <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/colorBlack"
        app:itemBackground="@color/colorBlack"
        app:itemIconTint="@drawable/navigation_background"
        app:menu="@menu/main_menu"
        app:itemTextColor="@drawable/navigation_background"
        >

    </com.google.android.material.bottomnavigation.BottomNavigationView>-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">


            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorWhite"
             />

            <LinearLayout
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" />


            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tags"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorWhite"

               />

            <me.gujun.android.taggroup.TagGroup
                android:id="@+id/tag_group"
                style="@style/TagGroup"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                app:atg_backgroundColor="@color/colorBlack"
                app:atg_borderColor="@color/colorLightPurple"
                app:atg_textColor="@color/colorLightPurple"
                />

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorWhite"/>

          <RelativeLayout
              android:layout_width="match_parent"
              android:layout_height="match_parent" >

              <WebView
                  android:id="@+id/webView1"
                  android:layout_width="match_parent"
                  android:layout_height="250dp"
                  android:layout_marginStart="10dp"
                  android:layout_marginEnd="10dp"
                  android:layout_alignParentLeft="true"
                  android:layout_alignParentTop="true" />

          </RelativeLayout>

            <TextView
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/related"
                android:textSize="20dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:textColor="@color/colorWhite"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recomended"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="55dp"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimaryDark"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="390dp"
            app:contentScrim="@android:color/transparent"
            app:expandedTitleGravity="bottom"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
            app:maxLines="3">

            <ImageView
                android:id="@+id/product_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.75"
                android:scaleType="fitXY"
                />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_view"
                    android:layout_width="200dp"
                    android:layout_height="300dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="35dp"
                    app:cardElevation="4dp"
                    app:cardMaxElevation="4dp">

                    <LinearLayout
                        android:id="@+id/ll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="2dp"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/product_img"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:scaleType="fitXY" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                app:contentInsetLeft="0dp"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="parallax"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

              <!--  <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_product_back"
                        android:onClick="onClick"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginLeft="10dp"
                        android:background="@drawable/ic_arrow_back_white" />

                </LinearLayout>-->

        </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_favorite"
        app:layout_anchor="@id/collapsing_toolbar"
        app:layout_anchorGravity="bottom|right"
        app:backgroundTint="@color/colorLightPurple"
        android:layout_marginEnd="16dp" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>